--- a/StudentStats_mvp.ipynb
+++ b/StudentStats_mvp.ipynb
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "39  [{'text': 'Me', 'confidence': 0.89, 'speaker':...                40  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
        "        font-family: \"Lato\", sans-serif;\n",
        "      }\n",
        "\n",
-       "      #chart-b9798fd7, #featured-chart-b9798fd7 {\n",
+       "      #chart-40db1697, #featured-chart-40db1697 {\n",
        "\n",
        "        font-size: 20px;\n",
        "        font-family: \"Lato\", sans-serif;\n",
@@ -859,19 +859,19 @@
        "        fill: #454545;\n",
        "      }\n",
        "\n",
-       "      #chart-b9798fd7 svg, #featured-chart-b9798fd7 svg {\n",
+       "      #chart-40db1697 svg, #featured-chart-40db1697 svg {\n",
        "        max-width: 900.0px;\n",
        "      }\n",
        "\n",
        "      @media (min-width: 600px) {\n",
-       "\t\t\t\t#chart-b9798fd7{\n",
+       "\t\t\t\t#chart-40db1697{\n",
        "\t\t\t\t\tfont-size: 18px;\n",
        "\t\t\t\t}\n",
        "\t\t\t}\n",
        "    </style>\n",
        "  </head>\n",
        "  <body>\n",
-       "    <div id=\"chart-b9798fd7\" class=\"chord\">\n",
+       "    <div id=\"chart-40db1697\" class=\"chord\">\n",
        "    </div>\n",
        "    <script src=\"https://unpkg.com/@popperjs/core@2\"></script>\n",
        "    <script src=\"https://unpkg.com/tippy.js@6\"></script>\n",
@@ -897,7 +897,7 @@
        "        innerRadius = Math.min(width, height) * 0.39;\n",
        "        outerRadius = innerRadius * 1.1;\n",
        "\n",
-       "      tag_id = \"chart-b9798fd7\";\n",
+       "      tag_id = \"chart-40db1697\";\n",
        "      padding = 0.001;\n",
        "      Names = ['A', 'B'];\n",
        "      colors = d3.schemeSet1;\n",
@@ -1298,16 +1298,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Back with the whole topic of the Confederate flag, which is absolutely a hot button topic right?\\nNow, especially after the situation happened in South Carolina, she had a lot of people who were discussing'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# nlp = spacy.load(\"en_core_web_sm\")\n",
     "nlp = en_core_web_sm.load()\n",
     "\n",
     "# Create master transcript from df['Text']\n",
     "keywords = []\n",
-    "for i in df['Sentences']:\n",
+    "for i in df['text']:\n",
     "    keywords.append(i)\n",
     "    \n",
     "#Convert list to string\n",
@@ -1330,17 +1341,373 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>speaker</th>\n",
+       "      <th>num_words_spoken</th>\n",
+       "      <th>target</th>\n",
+       "      <th>num_words_received</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A</td>\n",
+       "      <td>70</td>\n",
+       "      <td>B</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>B</td>\n",
+       "      <td>15</td>\n",
+       "      <td>A</td>\n",
+       "      <td>1132.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A</td>\n",
+       "      <td>1132</td>\n",
+       "      <td>B</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>B</td>\n",
+       "      <td>5</td>\n",
+       "      <td>A</td>\n",
+       "      <td>475.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A</td>\n",
+       "      <td>475</td>\n",
+       "      <td>B</td>\n",
+       "      <td>325.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>B</td>\n",
+       "      <td>325</td>\n",
+       "      <td>A</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>A</td>\n",
+       "      <td>84</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1647.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>B</td>\n",
+       "      <td>1647</td>\n",
+       "      <td>A</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>A</td>\n",
+       "      <td>12</td>\n",
+       "      <td>B</td>\n",
+       "      <td>117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>B</td>\n",
+       "      <td>117</td>\n",
+       "      <td>A</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>A</td>\n",
+       "      <td>11</td>\n",
+       "      <td>B</td>\n",
+       "      <td>15.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>B</td>\n",
+       "      <td>15</td>\n",
+       "      <td>A</td>\n",
+       "      <td>19.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>A</td>\n",
+       "      <td>19</td>\n",
+       "      <td>B</td>\n",
+       "      <td>727.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>B</td>\n",
+       "      <td>727</td>\n",
+       "      <td>A</td>\n",
+       "      <td>246.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>A</td>\n",
+       "      <td>246</td>\n",
+       "      <td>B</td>\n",
+       "      <td>265.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>B</td>\n",
+       "      <td>265</td>\n",
+       "      <td>A</td>\n",
+       "      <td>37.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>A</td>\n",
+       "      <td>37</td>\n",
+       "      <td>B</td>\n",
+       "      <td>161.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>B</td>\n",
+       "      <td>161</td>\n",
+       "      <td>A</td>\n",
+       "      <td>25.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>A</td>\n",
+       "      <td>25</td>\n",
+       "      <td>B</td>\n",
+       "      <td>233.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>B</td>\n",
+       "      <td>233</td>\n",
+       "      <td>A</td>\n",
+       "      <td>369.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>A</td>\n",
+       "      <td>369</td>\n",
+       "      <td>B</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>B</td>\n",
+       "      <td>6</td>\n",
+       "      <td>A</td>\n",
+       "      <td>33.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>A</td>\n",
+       "      <td>33</td>\n",
+       "      <td>B</td>\n",
+       "      <td>199.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>B</td>\n",
+       "      <td>199</td>\n",
+       "      <td>A</td>\n",
+       "      <td>109.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>A</td>\n",
+       "      <td>109</td>\n",
+       "      <td>B</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>B</td>\n",
+       "      <td>17</td>\n",
+       "      <td>A</td>\n",
+       "      <td>132.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>A</td>\n",
+       "      <td>132</td>\n",
+       "      <td>B</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>B</td>\n",
+       "      <td>40</td>\n",
+       "      <td>A</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>A</td>\n",
+       "      <td>22</td>\n",
+       "      <td>B</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>B</td>\n",
+       "      <td>13</td>\n",
+       "      <td>A</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>A</td>\n",
+       "      <td>5</td>\n",
+       "      <td>B</td>\n",
+       "      <td>261.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>B</td>\n",
+       "      <td>261</td>\n",
+       "      <td>A</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>A</td>\n",
+       "      <td>14</td>\n",
+       "      <td>B</td>\n",
+       "      <td>1235.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>B</td>\n",
+       "      <td>1235</td>\n",
+       "      <td>A</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>A</td>\n",
+       "      <td>10</td>\n",
+       "      <td>B</td>\n",
+       "      <td>704.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>B</td>\n",
+       "      <td>704</td>\n",
+       "      <td>A</td>\n",
+       "      <td>239.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>A</td>\n",
+       "      <td>239</td>\n",
+       "      <td>B</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>B</td>\n",
+       "      <td>11</td>\n",
+       "      <td>A</td>\n",
+       "      <td>336.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>A</td>\n",
+       "      <td>336</td>\n",
+       "      <td>B</td>\n",
+       "      <td>40.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>B</td>\n",
+       "      <td>40</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   speaker  num_words_spoken target  num_words_received\n",
+       "0        A                70      B                15.0\n",
+       "1        B                15      A              1132.0\n",
+       "2        A              1132      B                 5.0\n",
+       "3        B                 5      A               475.0\n",
+       "4        A               475      B               325.0\n",
+       "5        B               325      A                84.0\n",
+       "6        A                84      B              1647.0\n",
+       "7        B              1647      A                12.0\n",
+       "8        A                12      B               117.0\n",
+       "9        B               117      A                11.0\n",
+       "10       A                11      B                15.0\n",
+       "11       B                15      A                19.0\n",
+       "12       A                19      B               727.0\n",
+       "13       B               727      A               246.0\n",
+       "14       A               246      B               265.0\n",
+       "15       B               265      A                37.0\n",
+       "16       A                37      B               161.0\n",
+       "17       B               161      A                25.0\n",
+       "18       A                25      B               233.0\n",
+       "19       B               233      A               369.0\n",
+       "20       A               369      B                 6.0\n",
+       "21       B                 6      A                33.0\n",
+       "22       A                33      B               199.0\n",
+       "23       B               199      A               109.0\n",
+       "24       A               109      B                17.0\n",
+       "25       B                17      A               132.0\n",
+       "26       A               132      B                40.0\n",
+       "27       B                40      A                22.0\n",
+       "28       A                22      B                13.0\n",
+       "29       B                13      A                 5.0\n",
+       "30       A                 5      B               261.0\n",
+       "31       B               261      A                14.0\n",
+       "32       A                14      B              1235.0\n",
+       "33       B              1235      A                10.0\n",
+       "34       A                10      B               704.0\n",
+       "35       B               704      A               239.0\n",
+       "36       A               239      B                11.0\n",
+       "37       B                11      A               336.0\n",
+       "38       A               336      B                40.0\n",
+       "39       B                40    NaN                 NaN"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "links"
+   ]
   },
   {
    "cell_type": "code",
